feat:  GetCategoriesList , GetCategoriesListWithEvents, CreateEvent

--- a/Ticketo.TicketManagement.Application/Ticketo.TicketManagement.Application.csproj
+++ b/Ticketo.TicketManagement.Application/Ticketo.TicketManagement.Application.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Ticketo.TicketManagement.Domain\Ticketo.TicketManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Categories\Commands\" />
+    <Folder Include="Features\Orders\Commands\" />
+    <Folder Include="Features\Orders\Queries\" />
+  </ItemGroup>
+
 </Project>
